mobilerobotics_ws/log/build_2023-12-01_20-11-44/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/standard_angle.py", line 19
    return = math.asin(t2)
           ^
SyntaxError: invalid syntax

